doc(*): Adjust talk title to include Java 21 LTS

--- a/ABSTRACT.adoc
+++ b/ABSTRACT.adoc
@@ -1,4 +1,4 @@
-# Nicht alltäglich: Neues bei Tools, GCs, Vector und FFM API
+# Nicht alltäglich: Neues bei Tools, GCs, Vector und FFM API in Java 21 LTS
 Neben den prominenten Neuerungen bei API und Sprache bringt das neue Java 21 wieder viele Verbesserungen unter der Haube sowie Neues im Bereich der Performance, Sicherheit und Tools mit sich. In dieser Session wagen wir einen Blick auf die weniger alltäglichen Themen und geben einen Überblick über die wichtigsten Änderungen seit Java 17 und 11.
 
 Der Vortrag zeigt, wie Java 21 helfen kann, übliche, aber auch spezielle Anwendungen zu beschleunigen. Die Teilnehmenden erfahren mehr über experimentelle Funktionen wie die Vector API und das Foreign Function & Memory (FFM) API und wie diese der wachsenden Bedeutung von Machine Learning gerecht werden möchten, aber dabei bereits einige Anläufe hinter sich haben.
