build(presentation): disable live.js

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -1770,7 +1770,7 @@ https://www.pexels.com/[pexels.com] & https://de.freeimages.com/[freeimages.com]
 
 
 
-[pass]
-++++
-<script src="./live.js"></script>
-++++
+// [pass]
+// ++++
+// <script src="./live.js"></script>
+// ++++
