doc(presentation): work email

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -1,5 +1,5 @@
 = Nicht alltäglich: Neues bei Tools, GCs, Vector und FFM API in Java 21 LTS
-Benjamin Schmid, ben@tolor.de @ben@tolor.de
+Benjamin Schmid, benjamin.schmid@nagarro.com
 1.0, 2023-10-04
 // :docinfo: private would enable presentation-docinfo-footer.html
 :revealjs_customtheme: reveal.js/dist/theme/moon.css
